--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,7 @@
 		<link
 			rel="search"
 			type="application/opensearchdescription+xml"
-			title="Open WebUI"
+			title="Superno AI"
 			href="/opensearch.xml"
 		/>
 
